// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`列图标生成: flex5 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "src": "./img/img2.png",
          },
          "children": Array [],
          "extraInfo": Object {
            "sameNode": true,
          },
          "type": "Image",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "优惠券",
              },
              "children": Array [],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "contained::left",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "src": "./img/img3.png",
          },
          "children": Array [],
          "extraInfo": Object {
            "sameNode": true,
          },
          "type": "Image",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "计次卡",
              },
              "children": Array [],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "contained::left",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "src": "./img/img4.png",
          },
          "children": Array [],
          "extraInfo": Object {
            "sameNode": true,
          },
          "type": "Image",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "充值卡",
              },
              "children": Array [],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "contained::left",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "src": "./img/img5.png",
                  },
                  "children": Array [],
                  "extraInfo": Object {
                    "sameNode": true,
                  },
                  "type": "Image",
                },
              ],
              "extraInfo": Object {
                "isTempContainerNode": true,
                "tempCnntainerFlag": "contain::left",
              },
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "服务/商品",
              },
              "children": Array [],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "left::left-contained",
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {
    "sameNode": true,
  },
  "type": "Block",
}
`;

exports[`券使用说明: flex7 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {
                                            "text": "¥",
                                          },
                                          "children": Array [],
                                          "extraInfo": Object {},
                                          "type": "Text",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isTempContainerNode": true,
                                        "tempCnntainerFlag": "right::contained",
                                      },
                                      "type": "Block",
                                    },
                                    Object {
                                      "attrs": Object {
                                        "text": "30",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {},
                                      "type": "Text",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isTempContainerNode": true,
                                "tempCnntainerFlag": "contain::left",
                              },
                              "type": "Block",
                            },
                            Object {
                              "attrs": Object {
                                "text": "满150可用",
                              },
                              "children": Array [],
                              "extraInfo": Object {},
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "提莫家宠粉节宠物外出用品超级抵用券",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "2019.11.01至2019.11.02，以下商品可使用该优惠券",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {},
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [],
      "extraInfo": Object {},
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`券详情页面: flex8 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "src": "./img/img20.png",
      },
      "children": Array [],
      "extraInfo": Object {
        "isComp": true,
        "sameNode": true,
      },
      "type": "Image",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Block",
                            },
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {},
                                          "children": Array [
                                            Object {
                                              "attrs": Object {},
                                              "children": Array [
                                                Object {
                                                  "attrs": Object {
                                                    "text": "¥",
                                                  },
                                                  "children": Array [],
                                                  "extraInfo": Object {
                                                    "isComp": true,
                                                    "sameNode": true,
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "extraInfo": Object {
                                                "isTempContainerNode": true,
                                                "tempCnntainerFlag": "right::contained",
                                              },
                                              "type": "Block",
                                            },
                                            Object {
                                              "attrs": Object {
                                                "text": "30",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isComp": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                          ],
                                          "extraInfo": Object {
                                            "isMergeNode": true,
                                          },
                                          "type": "Block",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isTempContainerNode": true,
                                        "tempCnntainerFlag": "contain::left",
                                      },
                                      "type": "Block",
                                    },
                                    Object {
                                      "attrs": Object {
                                        "text": "满150可用",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isComp": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isTempContainerNode": true,
                                "tempCnntainerFlag": "right::contain",
                              },
                              "type": "Block",
                            },
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "提莫家宠粉节宠物外出用品超级抵用券",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isComp": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                              ],
                              "extraInfo": Object {
                                "isTempContainerNode": true,
                                "tempCnntainerFlag": "right::contain",
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isComp": true,
                        "sameNode": true,
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "2019.11.01至2019.11.02，以下商品可使用该优惠券",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isComp": true,
                            "sameNode": true,
                          },
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "left-overlap::left",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isComp": true,
                "sameNode": true,
              },
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [],
              "extraInfo": Object {
                "isComp": true,
                "sameNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img22.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {
                        "isComp": true,
                        "sameNode": true,
                      },
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗…",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img24.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {
                        "isComp": true,
                        "sameNode": true,
                      },
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬野兽派洗剪吹A套餐",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥75",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img23.png",
                      },
                      "children": Array [],
                      "extraInfo": Object {
                        "isComp": true,
                        "sameNode": true,
                      },
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isComp": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "src": "./img/img25.png",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isComp": true,
                            "sameNode": true,
                          },
                          "type": "Image",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "小型犬洗剪吹B套餐",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isComp": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "text": "¥20～¥75",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isComp": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isTempContainerNode": true,
                                    "tempCnntainerFlag": "contained::left",
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isMergeNode": true,
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "right::contain",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isTempContainerNode": true,
                    "tempCnntainerFlag": "contained::left",
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isMergeNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "contain::right-overlap",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "————＞ω＜我是有底线的————",
          },
          "children": Array [],
          "extraInfo": Object {
            "isComp": true,
            "sameNode": true,
          },
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contained::right",
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "src": "./img/img21.png",
      },
      "children": Array [],
      "extraInfo": Object {
        "isComp": true,
        "sameNode": true,
      },
      "type": "Image",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`单行图文混排: flex3 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "2019.09.10 22:23:45",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "已关闭",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img1.png",
              },
              "children": Array [],
              "type": "Image",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "超值三周年充值卡",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "left::left-contain",
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥1000",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "×1",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "right-contained::left",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {
                    "text": "鸡肉 400g",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "extraInfo": Object {
                "isMergeNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "right::contain",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "共1件商品，实付¥1000",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "right-contained::left",
      },
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;

exports[`单行文本: flex0 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "text": "有效期",
      },
      "children": Array [],
      "type": "Text",
    },
    Object {
      "attrs": Object {
        "text": "购买后365天内有效",
      },
      "children": Array [],
      "type": "Text",
    },
  ],
  "type": "Block",
}
`;

exports[`单行文本1.1: flex1.1 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [],
      "extraInfo": Object {},
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥",
                          },
                          "children": Array [],
                          "extraInfo": Object {},
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contained",
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {
                        "text": "30",
                      },
                      "children": Array [],
                      "extraInfo": Object {},
                      "type": "Text",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isTempContainerNode": true,
                "tempCnntainerFlag": "contain::left",
              },
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "满150可用",
              },
              "children": Array [],
              "extraInfo": Object {},
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "right::contain",
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "提莫家宠粉节宠物外出用品超级抵用券",
          },
          "children": Array [],
          "extraInfo": Object {},
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "right::contain",
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;

exports[`多行图文列表: flex2 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "text": "为您推荐",
      },
      "children": Array [],
      "type": "Text",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img1.png",
                      },
                      "children": Array [],
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img3.png",
                      },
                      "children": Array [],
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬野兽派洗剪吹A套餐",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥75",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img2.png",
                      },
                      "children": Array [],
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥160",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "src": "./img/img4.png",
                      },
                      "children": Array [],
                      "type": "Image",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "小型犬洗剪吹B套餐",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                            Object {
                              "attrs": Object {
                                "text": "¥20～¥75",
                              },
                              "children": Array [],
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "right::contain",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "sameNode": true,
              },
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "更多服务/商品",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contain::right",
      },
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;

exports[`多行文本: flex1 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [],
          "type": "Block",
        },
        Object {
          "attrs": Object {
            "text": "卡项权益",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "美容服务",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "凶悍大叔洗澡",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "温柔小姐姐做造型",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "精油美毛",
              },
              "children": Array [],
              "type": "Text",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "清洁服务",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "×10",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "凶悍大叔洗澡",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "温柔小姐姐做造型",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;

exports[`多行重复文字: flex4 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "充值卡",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "更多充值卡",
                      },
                      "children": Array [],
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "src": "./img/img1.png",
                          },
                          "children": Array [],
                          "type": "Image",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "left::contained",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isTempContainerNode": true,
                "tempCnntainerFlag": "right::contain",
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "黑金VIP黄金卡",
                      },
                      "children": Array [],
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥8848",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "永久有效",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "粉丝珍爱卡",
                      },
                      "children": Array [],
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "¥800",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "365天内有效",
                          },
                          "children": Array [],
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contain::right",
      },
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;

exports[`首页生成: flex6 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "src": "./img/img13.png",
                  },
                  "children": Array [],
                  "extraInfo": Object {
                    "isBgImage": true,
                    "sameNode": true,
                  },
                  "type": "Image",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "提莫的蘑菇摊儿",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {
                            "text": "南京市玄武区龙蟠路618号毛孩子广场F1-1001",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isTempContainerNode": true,
                    "tempCnntainerFlag": "right::contain",
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isMergeNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isBgImage": true,
            "sameNode": true,
          },
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "src": "./img/img14.png",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Image",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "优惠券",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isBgImage": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "contained::left",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "src": "./img/img15.png",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Image",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "计次卡",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isBgImage": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "contained::left",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "src": "./img/img16.png",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Image",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {
                                "text": "充值卡",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isBgImage": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "contained::left",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "src": "./img/img17.png",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isBgImage": true,
                                    "sameNode": true,
                                  },
                                  "type": "Image",
                                },
                              ],
                              "extraInfo": Object {
                                "isTempContainerNode": true,
                                "tempCnntainerFlag": "contain::left",
                              },
                              "type": "Block",
                            },
                            Object {
                              "attrs": Object {
                                "text": "服务/商品",
                              },
                              "children": Array [],
                              "extraInfo": Object {
                                "isBgImage": true,
                                "sameNode": true,
                              },
                              "type": "Text",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "left::left-contained",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isBgImage": true,
                "sameNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isTempContainerNode": true,
            "tempCnntainerFlag": "contained::left-overlap",
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isMergeNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "充值卡",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Text",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "更多充值卡",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isBgImage": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "src": "./img/img11.png",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Image",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isTempContainerNode": true,
                                    "tempCnntainerFlag": "left::contained",
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isMergeNode": true,
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isTempContainerNode": true,
                            "tempCnntainerFlag": "right::contain",
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isBgImage": true,
                    "sameNode": true,
                  },
                  "type": "Block",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "黑金VIP黄金卡",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isBgImage": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "text": "¥8848",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                    Object {
                                      "attrs": Object {
                                        "text": "永久有效",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isMergeNode": true,
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Block",
                        },
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "粉丝珍爱卡",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isBgImage": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "text": "¥800",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                    Object {
                                      "attrs": Object {
                                        "text": "365天内有效",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isMergeNode": true,
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isMergeNode": true,
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isTempContainerNode": true,
                    "tempCnntainerFlag": "contain::right",
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {
                "isMergeNode": true,
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "sameNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contained::left",
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {
                            "text": "为您推荐",
                          },
                          "children": Array [],
                          "extraInfo": Object {
                            "isBgImage": true,
                            "sameNode": true,
                          },
                          "type": "Text",
                        },
                      ],
                      "extraInfo": Object {
                        "isBgImage": true,
                        "sameNode": true,
                      },
                      "type": "Block",
                    },
                    Object {
                      "attrs": Object {},
                      "children": Array [
                        Object {
                          "attrs": Object {},
                          "children": Array [
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "src": "./img/img7.png",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Image",
                                    },
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {},
                                          "children": Array [
                                            Object {
                                              "attrs": Object {
                                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                            Object {
                                              "attrs": Object {
                                                "text": "¥20～¥160",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                          ],
                                          "extraInfo": Object {
                                            "isMergeNode": true,
                                          },
                                          "type": "Block",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isTempContainerNode": true,
                                        "tempCnntainerFlag": "right::contain",
                                      },
                                      "type": "Block",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "src": "./img/img9.png",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Image",
                                    },
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {},
                                          "children": Array [
                                            Object {
                                              "attrs": Object {
                                                "text": "大型犬野兽派洗剪吹A套餐",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                            Object {
                                              "attrs": Object {
                                                "text": "¥20～¥75",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                          ],
                                          "extraInfo": Object {
                                            "isMergeNode": true,
                                          },
                                          "type": "Block",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isTempContainerNode": true,
                                        "tempCnntainerFlag": "right::contain",
                                      },
                                      "type": "Block",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {
                                        "src": "./img/img8.png",
                                      },
                                      "children": Array [],
                                      "extraInfo": Object {
                                        "isBgImage": true,
                                        "sameNode": true,
                                      },
                                      "type": "Image",
                                    },
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {},
                                          "children": Array [
                                            Object {
                                              "attrs": Object {
                                                "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                            Object {
                                              "attrs": Object {
                                                "text": "¥20～¥160",
                                              },
                                              "children": Array [],
                                              "extraInfo": Object {
                                                "isBgImage": true,
                                                "sameNode": true,
                                              },
                                              "type": "Text",
                                            },
                                          ],
                                          "extraInfo": Object {
                                            "isMergeNode": true,
                                          },
                                          "type": "Block",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isTempContainerNode": true,
                                        "tempCnntainerFlag": "right::contain",
                                      },
                                      "type": "Block",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isMergeNode": true,
                                  },
                                  "type": "Block",
                                },
                                Object {
                                  "attrs": Object {},
                                  "children": Array [
                                    Object {
                                      "attrs": Object {},
                                      "children": Array [
                                        Object {
                                          "attrs": Object {
                                            "src": "./img/img10.png",
                                          },
                                          "children": Array [],
                                          "extraInfo": Object {
                                            "isBgImage": true,
                                            "sameNode": true,
                                          },
                                          "type": "Image",
                                        },
                                        Object {
                                          "attrs": Object {},
                                          "children": Array [
                                            Object {
                                              "attrs": Object {},
                                              "children": Array [
                                                Object {
                                                  "attrs": Object {
                                                    "text": "小型犬洗剪吹B套餐",
                                                  },
                                                  "children": Array [],
                                                  "extraInfo": Object {
                                                    "isBgImage": true,
                                                    "sameNode": true,
                                                  },
                                                  "type": "Text",
                                                },
                                                Object {
                                                  "attrs": Object {
                                                    "text": "¥20～¥75",
                                                  },
                                                  "children": Array [],
                                                  "extraInfo": Object {
                                                    "isBgImage": true,
                                                    "sameNode": true,
                                                  },
                                                  "type": "Text",
                                                },
                                              ],
                                              "extraInfo": Object {
                                                "isMergeNode": true,
                                              },
                                              "type": "Block",
                                            },
                                          ],
                                          "extraInfo": Object {
                                            "isTempContainerNode": true,
                                            "tempCnntainerFlag": "right::contain",
                                          },
                                          "type": "Block",
                                        },
                                      ],
                                      "extraInfo": Object {
                                        "isMergeNode": true,
                                      },
                                      "type": "Block",
                                    },
                                  ],
                                  "extraInfo": Object {
                                    "isTempContainerNode": true,
                                    "tempCnntainerFlag": "right-contained::left",
                                  },
                                  "type": "Block",
                                },
                              ],
                              "extraInfo": Object {
                                "isMergeNode": true,
                              },
                              "type": "Block",
                            },
                            Object {
                              "attrs": Object {},
                              "children": Array [
                                Object {
                                  "attrs": Object {
                                    "text": "更多服务/商品",
                                  },
                                  "children": Array [],
                                  "extraInfo": Object {
                                    "isBgImage": true,
                                    "sameNode": true,
                                  },
                                  "type": "Text",
                                },
                              ],
                              "extraInfo": Object {
                                "isBgImage": true,
                                "sameNode": true,
                              },
                              "type": "Block",
                            },
                          ],
                          "extraInfo": Object {
                            "isMergeNode": true,
                          },
                          "type": "Block",
                        },
                      ],
                      "extraInfo": Object {
                        "isTempContainerNode": true,
                        "tempCnntainerFlag": "contain::right",
                      },
                      "type": "Block",
                    },
                  ],
                  "extraInfo": Object {
                    "isMergeNode": true,
                  },
                  "type": "Block",
                },
              ],
              "extraInfo": Object {},
              "type": "Block",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "————＞ω＜我是有底线的————",
                  },
                  "children": Array [],
                  "extraInfo": Object {
                    "isBgImage": true,
                    "sameNode": true,
                  },
                  "type": "Text",
                },
              ],
              "extraInfo": Object {
                "isTempContainerNode": true,
                "tempCnntainerFlag": "contained::left",
              },
              "type": "Block",
            },
          ],
          "extraInfo": Object {
            "isMergeNode": true,
          },
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "isTempContainerNode": true,
        "tempCnntainerFlag": "contain::right",
      },
      "type": "Block",
    },
  ],
  "extraInfo": Object {},
  "type": "Block",
}
`;
